client/main.css
.navbar {
    background: #eeeeee;
    border: #eeeeee;
    display: block;
    margin-bottom: 0px;
}

.header_logo {
    display: inline-block;
    margin: 10px 30px 10px 10px;
}

ul[class="navbar nav-pills navbar-default"] {
    background: #eeeeee;
    border-radius: 1px;
    left: 0px;
    padding: 0px 0px 0px 0px;
    vertical-align: middle;
    text-align: center;
    margin-left: 0px;
    position: relative;
    border: #eeeeee;
    display: inline-block;
}

input[type=checkbox] {
    margin-top: 1em;
}

#main-pane {
    top: 10px;
    bottom: 10px;
    left: 30px;
    right: 30px;
    padding-top: 10px;
    overflow: auto;
    position: absolute;
}

#login {
    float: right;
    vertical-align: middle;
    padding-top: 15px;
    right: 30px;
    position: absolute;
}

#error {
    color: red;
}

.tag {
    cursor: pointer;
    float: left;
    margin: 0px 0px 0px;
    padding: 15px 10px 15px 10px;
    font-size: 1.2em;
    text-align: center;
    border-radius: 10px;
    position: relative;
    color: #FAA51B;
    font-weight: bold;
}

.tag:hover {
    background-color: rgba(128, 128, 128, 0.30);
}

.menu-options {
    padding-left: 10px;
    vertical-align: middle;
    position: absolute;
}

ul {
    list-style-type: none;
}

.tag-list {
    margin: 0px !important;
}

.tag-list .tag {
    margin: 0px 0px 0px 10px;
}

#new-todo-box {
    margin-top: 10px 60px 10px 20px;
    font-size: 160%;
    position: relative;
    height: 40px;
}

#new-todo {
    position: absolute;
    width: 100%;
}

#items-view {
    margin-top: 5px;
    margin-left: 5px;
}

#item-list .todo {
    display: block;
    height: 50px;
    position: relative;
    /*overflow: hidden;*/
}

#item-list .todo .destroy {
    cursor: pointer;
    position: absolute;
    left: 5px;
    top: 15px;
    height: 20px;
    width: 20px;
}

#item-list .todo .display, #item-list .todo .edit {
    margin-left: 30px;
    height: 100%;
    width: auto;
    float: left;
    padding-top: 18px;
    line-height: 1;
}

#todo-input {
    width: 300px;
    position: relative;
    top: -3px;
}

#item-list .todo .destroy:hover {
    background-position: 0 -20px;
}

#item-list .todo .item-tags {
    overflow: auto;
    float: left;
    margin-right: 8px;
}

#item-list .todo .item-tags .tag {
    margin-top: 15px;
}

#item-list .todo .item-tags .removable_tag {
    padding-right: 22px;

    opacity: 0; /* make things invisible upon start */
    -webkit-animation: fadeIn ease-in 1 forwards 1s;
    -moz-animation: fadeIn ease-in 1 forwards 1s;
    animation: fadeIn ease-in 1 forwards 1s;
}

@-webkit-keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

@-moz-keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

#item-list .todo .item-tags .tag .remove {
    position: absolute;
    top: 0;
    right: 4px;
    bottom: 0;
    width: 16px;
    background: url("/close_16.png") no-repeat 0 center;
}

#item-list .todo .item-tags .tag .remove:hover {
    background-position: -16px center;
}

#item-list .todo .item-tags div.addtag {
    background: none;
    color: #333;
    border: 1px dashed #999;
}

#item-list .todo .check {
    float: left;
    width: 25px;
}

#item-list .todo .todo-text {
    float: left;
    margin-left: 10px;
    font-size: 100%;
}

#item-list .todo .edit input {
    margin-left: 35px;
}

#edittag-input {
    min-width: 80px;
}

.large-input {
    height: 100% !important;
}

.active, label {
    background-color: rgba(163, 163, 163, 1);
    color: #f5f5f5;
}

.login-buttons-dropdown-align-right {
    margin-right: 400px;
}

.col-header > h4 {
    box-sizing: border-box;
    width: 70%;
    margin-left: 15%;
    border-bottom: 1px solid #428BCA;
    padding-bottom: 4px;
}

.col-divider {
    display: block;
    border-left: 1px solid #428BCA;
    margin: auto 0;
}

#timeSheetReviewer > .row:nth-child(odd) {
    background: rgba(0, 0, 0, 0.03);
}

.row {
    margin: 0 auto;
}

.row-item {
    background: #eee;
    margin: 5px;
    border-radius: 30px;
    background-clip: content-box;
    cursor: pointer;
}

.row-item.selected {
    background: #bbb;
}

.row-item:hover {
    background: rgba(66, 139, 202, 0.4);
}

.row-item-divider:not(:last-child) {
    display: block;
    border-bottom: 1px solid #428BCA;
    margin: 0 auto;
}

.row-item-divider:not(:last-child) .width-98 {
    width: 98%;
}

.row-div-1:not(:last-child), .row-div-2:not(:last-child), .row-div-3:not(:last-child), .row-div-4:not(:last-child),
.row-div-4:not(:last-child), .row-div-5:not(:last-child), .row-div-6:not(:last-child), .row-div-7:not(:last-child),
.row-div-8:not(:last-child), .row-div-9:not(:last-child), .row-div-10:not(:last-child), .row-div-11:not(:last-child), .row-div-12:not(:last-child) {
    box-sizing: border-box;
    padding-bottom: 5px;
}

.row-div-1, .row-header-div-1 {
    width: 8.33%;
}

.row-div-2, .row-header-div-2 {
    width: 16.67%;
}

.row-div-3, .row-header-div-3 {
    width: 25%;
}

.row-div-4, .row-header-div-4 {
    width: 33.33%;
}

.row-div-5, .row-header-div-5 {
    width: 41.67%;
}

.row-div-6, .row-header-div-6 {
    width: 50%;
}

.row-div-7, .row-header-div-7 {
    width: 58.33%;
}

.row-div-8, .row-header-div-8 {
    width: 66.6%;
}

.row-div-9, .row-header-div-9 {
    width: 75%;
}

.row-div-10, .row-header-div-10 {
    width: 83.33%;
}

.row-div-11, .row-header-div-11 {
    width: 91.67%;
}

.row-div-12, .row-header-div-12 {
    width: 100%;
}

